# goidev

./: .gitignore  .taurignore  AGENTS.md  Cargo.toml  DESIGN.md  PLANS.md  TODO.md  Trunk.toml  build_error.txt  complex_output.txt  output.txt  styles.css  wasm_error.txt
.gemini/: DESIGN.md  GEMINI.md  LEARN.md  PLANS.md  TODO.md  pdf_parser.rs
.gemini/references/pdf/: pdf_element.rs  pdf_page.rs
.github/: PLANS.md  TODO.md  copilot-instructions.md
.github/agents/: Test.agent.md
.github/instructions/: copilot-instructions.md  spec.md
.github/notes/: LEARN.md  PLANS.md  TODO.md
.github/references/pdf/: mod.rs  pdf_state.rs
dioxus-ui/: Cargo.toml
goidev-core/: Cargo.toml  complex_output.txt  test_output.txt
goidev-core/examples/: debug_pdf.rs
goidev-core/src/: dto.rs  font_utils.rs  lib.rs  markdown.rs  nlp_engine.rs  pdf_parser.rs  pdf_state.rs  reflow_engine.rs  storage_layer.rs
goidev-core/test/: pdf_parser_test.rs
goidev-core/tests/: debug_encoding.rs  integration_tests.rs  markdown_tests.rs  nlp_engine_tests.rs  pdf_parser_test.rs  pdf_parser_tests.rs  reflow_engine_tests.rs  reproduction_test.rs
goidev-core/tests/resources/: test-1.pdf.goidev.md  test-book.pdf.goidev.md
src/: app.rs
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: mod.rs  reflow_viewer.rs
