[package]
name = "goidev-ui"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.8.12", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Selection"] }
gloo-timers = { version = "0.3", features = ["futures"] }
serde = { version = "1", features = ["derive"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
goidev-core = { path = "./goidev-core" }

[workspace]
members = ["src-tauri", "goidev-core"]
