[package]
name = "goidev-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
lopdf = "0.38"
unicode-segmentation = "1.12"
waken_snowball = "0.1"
rusqlite = { version = "0.37", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["full"] }
# Optional for AI processing
candle-core = { version = "0.9.1", optional = true }
pdfium-render = { version = "0.8.35", optional = true }

[lib]
name = "goidev_core"
path = "src/lib.rs"

