[package]
name = "goidev-core"
version = "0.1.0"
edition = "2024"

[features]
default = []
storage = ["rusqlite"]

[dependencies]
lopdf = "0.38.0"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
pulldown-cmark = "0.13"
sha2 = "0.10"
dirs = "6"

# NLP dependencies (Milestone 4) - always available
unicode-segmentation = "1.12"
rust-stemmers = "1.2"

# Storage dependency - only for native targets (not WASM)
rusqlite = { version = "0.37", features = ["bundled"], optional = true }
